# checkcrontab

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  test_main.py
.github/: copilot-instructions.md
.github/workflows/: auto-assign.yml  ci.yml  main.yml
checkcrontab/: __init__.py  __main__.py  checker.py  logger.py  logging_config.py  main.py
docs/: CHANGELOG.md  FEATURES.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KR.md  README_PT.md  README_RU.md  README_ZH.md
examples/: invalid.txt  system_incorrect.txt  system_valid.txt  user_incorrect  user_incorrect.txt  user_valid.txt  valid.txt  without_new_line
tests/: test_checker.py  test_example.py  test_logger.py  test_main.py  test_property_cron.py  test_system_invalid.py  test_system_valid.py  test_user_invalid.py  test_user_valid.py
