[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkcrontab"
dynamic = ["version"]
description = "A Python3 script for checking syntax and correctness of crontab files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
maintainers = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
keywords = ["crontab", "cron", "validation", "syntax", "checker", "system", "administration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
]
requires-python = ">=3.7"

[project.optional-dependencies]

[project.scripts]
checkcrontab = "checkcrontab.main:main"

[project.urls]
Homepage = "https://github.com/wachawo/checkcrontab"
Repository = "https://github.com/wachawo/checkcrontab"
Documentation = "https://github.com/wachawo/checkcrontab#readme"
"Bug Reports" = "https://github.com/wachawo/checkcrontab/issues"

[tool.setuptools.dynamic]
version = { attr = "checkcrontab.__version__" }

[tool.setuptools.packages.find]
include = ["checkcrontab*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
checkcrontab = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["test_main.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 180
lint.select = ["E","F","I","UP","B","SIM","C4","PL"]
lint.ignore = ["E501"]
fix = true
include = ["*.py"]
exclude = ["examples/", "tests/", ".git", ".venv", "__pycache__", "build", "dist", "*.md", "*.json", "*.yaml", "*.yml", "*.toml"]

[tool.ruff.lint.pylint]
max-branches = 50
max-statements = 180
max-returns = 10
